# lltop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.chainlink/: hook-config.json  issues.db
src/llouie/: cli.py  client.py  state.py  statusline.py
src/llouie/tui/: app.py  logtail.py
src/lltop/: __init__.py  aggregator.py  cli.py  client.py  format.py  hf.py  logs.py  ps.py  state.py
src/lltop/tui/: app.py  logtail.py  rows.py
tests/: conftest.py  test_aggregator.py  test_client.py  test_format.py  test_hf.py  test_live.py  test_logs.py  test_logtail.py  test_ps.py  test_rows.py  test_state.py  test_statusline.py  test_tui.py
tests/fixtures/: api_metrics_populated.json  config_pinned.yaml  config_with_groups.yaml  logs_sample.txt  props_one_model.json  ps_idle.txt  ps_one_loaded.txt  running_idle.json  running_one_loaded.json  slots_idle.json  slots_one_processing.json  v1_models.json
