[project]
name = "lltop"
version = "0.0.1"
description = "TUI + status output for llama-swap"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0.3",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
lltop = "lltop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lltop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: integration tests that hit a real llama-swap on :1135 (opt-in via -m live)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
